Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
